--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ p{
 }
 
 .form{
-    color: red;
+    color:salmon;
      border: 5px dashed red;
      margin-left: 100px;
      background-color: white;
@@ -95,7 +95,7 @@ h2{
 .boxes{
     border: 3px solid green;
     border-radius: 40px;
-    background-color: lightseagreen;
+    background-color: rgb(0, 225, 255);
     margin: 50px;
     width: 400px;
     height: 270px;
